force-app/main/default/objects/Car_Rental__c/Car_Rental__c.object-meta.xml
<CustomObject>
    <label>Car Rental</label>
    <nameField>
        <label>Rental Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Rental</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>