force-app/main/default/objects/Car_Rental__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Car Rental</relationshipLabel>
    <relationshipName>Car_Rental</relationshipName>
    <type>Lookup</type>
</CustomField>