force-app/main/default/objects/Car_Rental__c/fields/Pickup_City__c.field-meta.xml
<CustomField>
    <fullName>Pickup_City__c</fullName>
    <label>Pickup City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>