force-app/main/default/objects/Car_Rental__c/fields/Pickup_Country__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Country__c</fullName>
    <label>Pickup Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>