force-app/main/default/objects/Car_Rental__c/fields/Return_City__c.field-meta.xml
<CustomField>
    <fullName>Return_City__c</fullName>
    <label>Return City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>