force-app/main/default/objects/Car_Rental__c/fields/Return_Country__c.field-meta.xml
<CustomField>
    <fullName>Return_Country__c</fullName>
    <label>Return Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>